--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="/img/1.jpeg" alt="">
+                            <img class="movie-list-item-img" src="/img/8.jpg" alt="">
                             <span class="movie-list-item-title">Sherdil: The Pilibhit Saga</span>
                             <p class="movie-list-item-desc">Sherdil: The Pilibhit Saga is a 2022 Indian Hindi-language film which is written and
                                 directed by Srijit Mukherji and
@@ -82,7 +82,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="/img/1.jpeg" alt="">
+                            <img class="movie-list-item-img" src="/img/2.jpeg" alt="">
                             <span class="movie-list-item-title">Sherdil: The Pilibhit Saga</span>
                             <p class="movie-list-item-desc">Sherdil: The Pilibhit Saga is a 2022 Indian Hindi-language film which is written and
                                 directed by Srijit Mukherji and
@@ -92,7 +92,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="/img/1.jpeg" alt="">
+                            <img class="movie-list-item-img" src="/img/3.jpg" alt="">
                             <span class="movie-list-item-title">Sherdil: The Pilibhit Saga</span>
                             <p class="movie-list-item-desc">Sherdil: The Pilibhit Saga is a 2022 Indian Hindi-language film which is written and
                                 directed by Srijit Mukherji and
@@ -102,7 +102,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="/img/1.jpeg" alt="">
+                            <img class="movie-list-item-img" src="/img/4.jpg" alt="">
                             <span class="movie-list-item-title">Sherdil: The Pilibhit Saga</span>
                             <p class="movie-list-item-desc">Sherdil: The Pilibhit Saga is a 2022 Indian Hindi-language film which is written and
                                 directed by Srijit Mukherji and
@@ -112,7 +112,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="/img/1.jpeg" alt="">
+                            <img class="movie-list-item-img" src="/img/5.jpg" alt="">
                             <span class="movie-list-item-title">Sherdil: The Pilibhit Saga</span>
                             <p class="movie-list-item-desc">Sherdil: The Pilibhit Saga is a 2022 Indian Hindi-language film which is written and
                                 directed by Srijit Mukherji and
@@ -122,7 +122,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="/img/1.jpeg" alt="">
+                            <img class="movie-list-item-img" src="/img/6.jpg" alt="">
                             <span class="movie-list-item-title">Sherdil: The Pilibhit Saga</span>
                             <p class="movie-list-item-desc">Sherdil: The Pilibhit Saga is a 2022 Indian Hindi-language film which is written and
                                 directed by Srijit Mukherji and
@@ -132,7 +132,7 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="/img/1.jpeg" alt="">
+                            <img class="movie-list-item-img" src="/img/7.jpg" alt="">
                             <span class="movie-list-item-title">Sherdil: The Pilibhit Saga</span>
                             <p class="movie-list-item-desc">Sherdil: The Pilibhit Saga is a 2022 Indian Hindi-language film which is written and
                                 directed by Srijit Mukherji and
